--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
+    "classnames": "^2.5.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "jotai": "^2.14.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
-    "react-responsive": "^10.0.1"
+    "react-responsive": "^10.0.1",
+    "react-router": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
