--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-responsive": "^10.0.1",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "swiper": "^12.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
